Fixed form position.

--- a/attempt3/index.html
+++ b/attempt3/index.html
@@ -15,6 +15,12 @@
 </head>
 </head>
 <body>
-    <div id="map" class='contain'></div>
+    <div id="container">
+        <div id="map" class='contain half'></div>
+        <div id="formInput" class="half">
+            <label for="Distance">Distance (between 1 and 27):</label>
+            <input type="number" id="distance" name="distance" min="1" max="27">
+        </div>
+    </div>
 </body>
 </html>
