--- a/attempt3/index.html
+++ b/attempt3/index.html
@@ -10,17 +10,25 @@
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
     <script src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
- 
     <script src="main.js" defer></script>
+    <script src="date.js" defer></script>
 </head>
 </head>
 <body>
     <div id="container">
-        <div id="map" class='contain half'></div>
-        <div id="formInput" class="half">
-            <label for="Distance">Distance (between 1 and 27):</label>
+        <div id="map" class='contain'></div>
+        <div id="formInput" >
+            <label for="distance">Distance (between 1 and 27): </label>
             <input type="number" id="distance" name="distance" min="1" max="27">
-        </div>
+            <label for="date">Select Day (default today): </label>
+            <select id="weekAhead">
+
+            </select>
+            <label for="time">Time of day:</label>
+            <select id="time">
+                
+            </select>
+            </div>
     </div>
 </body>
 </html>
