Got date, time, location from user to access weather.

--- a/attempt3/index.html
+++ b/attempt3/index.html
@@ -12,6 +12,7 @@
     <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
     <script src="main.js" defer></script>
     <script src="date.js" defer></script>
+    <script src="weather.js" defer></script>
 </head>
 </head>
 <body>
@@ -28,6 +29,9 @@
             <select id="time">
                 
             </select>
+            <button onclick="weatherConditions()">
+                Lets Go!
+            </button>
             </div>
     </div>
 </body>
