Will have to get Flask involved to make weather request.

--- a/attempt3/index.html
+++ b/attempt3/index.html
@@ -33,6 +33,7 @@
                 Lets Go!
             </button>
             </div>
+            <p id="infoForRun" hidden></p>
     </div>
 </body>
 </html>
