--- a/full_tut/index.html
+++ b/full_tut/index.html
@@ -9,7 +9,7 @@
   <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
   <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
   <link rel="stylesheet" href="style.css">
-  <script src="main.js" defer></script>
+  <script src="new.js" defer></script>
   <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.js"></script>
 <link
 rel="stylesheet"
